@@ -22,6 +22,7 @@
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 #
 
+cd `dirname $0`
 
 docker-compose up -d
 docker-compose exec duplicity_test /bin/bash
