@@ -22,5 +22,6 @@
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 #
 
+cd `dirname $0`
 
 docker-compose down
